--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
     fi 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get update;
-        sudo apt-get install clang-3.6;
+        sudo apt-get install -y clang-3.6;
         sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.6 100;
         sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.6 100;
     fi
