--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_install:
         sudo apt-get install -y clang-3.6;
         sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.6 100;
         sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.6 100;
+        sudo apt-get install -y autoconf libtool libkqueue-dev libkqueue0 libcurl4-openssl-dev libbsd-dev libblocksruntime-dev;
     fi
 
 install:
@@ -36,7 +37,6 @@ install:
         wget https://swift.org/builds/development/ubuntu1404/${TOOLCHAIN}/${TOOLCHAIN}-ubuntu14.04.tar.gz;
         tar xzf ${TOOLCHAIN}-ubuntu14.04.tar.gz;
         export PATH=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr/bin:"${PATH}";
-        sudo apt-get install autoconf libtool libkqueue-dev libkqueue0 libcurl4-openssl-dev libbsd-dev libblocksruntime-dev;
         git clone -b experimental/foundation https://github.com/apple/swift-corelibs-libdispatch.git;
         cd swift-corelibs-libdispatch && git submodule init && git submodule update && sh ./autogen.sh && CFLAGS=-fuse-ld=gold ./configure --with-swift-toolchain=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr --prefix=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr && make && make install;
         cd -;
