--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: true
 dist: trusty
 language: c
+notifications: never
 
 compiler:
   - clang
@@ -20,9 +21,9 @@ before_install:
     fi 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get update;
-        sudo apt-get install -y clang-3.8 libclang-common-3.8-dev libclang-3.8-dev;
-        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.8 100;
-        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.8 100;
+        sudo apt-get install -y clang-4.0;
+        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-4.0 100;
+        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-4.0 100;
         sudo apt-get install -y autoconf libtool libkqueue-dev libkqueue0 libcurl4-openssl-dev libbsd-dev libblocksruntime-dev;
     fi
 
