--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ before_install:
     fi 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get update;
-        sudo apt-get install -y clang-4.0;
-        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-4.0 100;
-        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-4.0 100;
-        sudo apt-get install -y autoconf libtool libkqueue-dev libkqueue0 libcurl4-openssl-dev libbsd-dev libblocksruntime-dev;
+        sudo apt-get install -y clang-3.8;
+        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.8 100;
+        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.8 100;
+        sudo apt-get install -y autoconf libtool libkqueue-dev libkqueue0 libcurl4-openssl-dev libbsd-dev libblocksruntime-dev libpthread-workqueue-dev ninja-build;
     fi
 
 install:
