--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,9 @@ before_install:
     fi 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get update;
-        sudo apt-get install -y autoconf libtool pkg-config clang systemtap-sdt-dev libblocksruntime-dev libkqueue-dev libbsd-dev;
+        sudo apt-get install -y autoconf libtool pkg-config clang-3.8 systemtap-sdt-dev libblocksruntime-dev libkqueue-dev libbsd-dev;
+        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.8 100;		
+        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.8 100;
     fi
 
 install:
