--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ install:
         tar xzf ${TOOLCHAIN}-ubuntu14.04.tar.gz;
         export PATH=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr/bin:"${PATH}";
         git clone -b master https://github.com/apple/swift-corelibs-libdispatch.git;
-        cd swift-corelibs-libdispatch && git submodule init && git submodule update && sh ./autogen.sh && CFLAGS=-fuse-ld=gold ./configure --with-swift-toolchain=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr --prefix=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr && make && make install;
+        cd swift-corelibs-libdispatch && git submodule init && git submodule update && sh ./autogen.sh && ./configure --with-swift-toolchain=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr --prefix=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr && make && make install;
         cd -;
     fi
 
