--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
         sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.8 100;		
         sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.8 100;
         export CC=clang-3.8;
+        export CXX=clang++-3.8;
     fi
 
 install:
