--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ osx_image: xcode8
 
 env:
   - TOOLCHAIN="swift-DEVELOPMENT-SNAPSHOT-2016-09-07-a"
-  - BRANCH="swift-3.0-branch"
   
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -40,7 +39,7 @@ install:
         wget https://swift.org/builds/development/ubuntu1404/${TOOLCHAIN}/${TOOLCHAIN}-ubuntu14.04.tar.gz;
         tar xzf ${TOOLCHAIN}-ubuntu14.04.tar.gz;
         export PATH=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr/bin:"${PATH}";
-        git clone -b ${BRANCH} https://github.com/apple/swift-corelibs-libdispatch.git;
+        git clone -b swift-3.0-branch https://github.com/apple/swift-corelibs-libdispatch.git;
         cd swift-corelibs-libdispatch && git submodule init && git submodule update && sh ./autogen.sh && ./configure --with-swift-toolchain=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr --prefix=${TRAVIS_BUILD_DIR}/${TOOLCHAIN}-ubuntu14.04/usr && make && make install;
         cd -;
     fi
