--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ os:
 
 osx_image: xcode8
 
-packages: ['clang-3.8']
-
 env:
   - TOOLCHAIN="swift-DEVELOPMENT-SNAPSHOT-2016-09-07-a"
     BRANCH="swift-3.0-branch"
@@ -24,7 +22,9 @@ before_install:
     fi 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get update;
-        sudo apt-get install -y autoconf libtool pkg-config libicu-dev systemtap-sdt-dev libblocksruntime-dev libkqueue-dev libbsd-dev;
+        sudo apt-get install -y autoconf libtool pkg-config clang-3.8 libicu-dev systemtap-sdt-dev libblocksruntime-dev libkqueue-dev libbsd-dev;
+        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.8 100;		
+        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.8 100;
         make CC=clang-3.8;
         make CXX=clang++-3.8;
     fi
