--- a/.travis.yml
+++ b/.travis.yml
@@ -5,30 +5,28 @@ notifications: never
 
 compiler:
   - clang
-  
-matrix:
-  include:
-    - os: osx
-    - os: linux
-      env: COMPILER_NAME=clang CXX=clang++-3.8 CC=clang-3.8
-      addons:
-        apt:
-          packages:
-            - autoconf libtool pkg-config clang-3.8 libicu-dev systemtap-sdt-dev libblocksruntime-dev libkqueue-dev libbsd-dev
-          sources: *sources
 
 osx_image: xcode8
+
+os: 
+  - osx
+  - linux
 
 env:
   - TOOLCHAIN="swift-DEVELOPMENT-SNAPSHOT-2016-09-07-a"
     BRANCH="swift-3.0-branch"
-  
+
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         brew update;
     fi 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         sudo apt-get update;
+        sudo apt-get install -y autoconf libtool pkg-config clang-3.8 libicu-dev systemtap-sdt-dev libblocksruntime-dev libkqueue-dev libbsd-dev;
+        sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-3.8 100;		
+        sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-3.8 100;
+        export CC=clang-3.8;
+        export CXX=clang++-3.8;
     fi
 
 install:
