--- a/.travis.yml
+++ b/.travis.yml
@@ -20,25 +20,25 @@ install:
             OS="ubuntu1404";
             SWIFTFILE="swift-$VERSION-RELEASE-ubuntu14.04";
         fi
-        echo "📚 Installing Dependencies"
-        sudo apt-get install -y clang libicu-dev uuid-dev
+        echo "📚 Installing Dependencies";
+        sudo apt-get install -y clang libicu-dev uuid-dev;
     
         echo "🐦 Installing Swift";
-        wget https://swift.org/builds/swift-$VERSION-release/$OS/swift-$VERSION-RELEASE/$SWIFTFILE.tar.gz
-        tar -zxf $SWIFTFILE.tar.gz
-        export PATH=$PWD/$SWIFTFILE/usr/bin:"${PATH}"
+        wget https://swift.org/builds/swift-$VERSION-release/$OS/swift-$VERSION-RELEASE/$SWIFTFILE.tar.gz;
+        tar -zxf $SWIFTFILE.tar.gz;
+        export PATH=$PWD/$SWIFTFILE/usr/bin:"${PATH}";
     fi
     
 script:
   - echo "🚀 Building";
-  - swift build
+  - swift build;
   - if [[ $? != 0 ]]; then 
         echo "❌  Build failed";
         exit 1; 
     fi
     
   - echo "💼 Building Release";
-  - swift build -c release
+  - swift build -c release;
   - if [[ $? != 0 ]]; then 
         echo "❌  Build for release failed";
         exit 1; 
@@ -46,11 +46,11 @@ script:
     
   - echo "🔎 Testing";
     
-  - swift test
+  - swift test;
   - if [[ $? != 0 ]]; then 
         echo "❌ Tests failed";
         exit 1; 
     fi
     
-  - echo "✅ Done"
+  - echo "✅ Done";
     
