--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ script:
   - swift --version;
   - echo "🚀 Building"; swift build;
   - echo "🚂 Building Release"; swift build -c release;
-  - echo "🔎 Testing"; swift test;
+  - echo "🔎 Testing"; swift test --skip-build;
