--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ install:
 script:
   - swift --version;
   - echo "🚂 Building";
-  - swift build;
+  - travis_wait 60 swift build;
   - echo "🚀 Building Release";
-  - swift build -c release;
+  - travis_wait 60 swift build -c release;
   - echo "🔎 Testing";
   - swift test -Xswiftc -whole-module-optimization;
