--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
+
+env:
+  - SWIFT_VERSION=3.1.1
+
 matrix:
   include:
     - os: linux
       dist: trusty
       sudo: required
     - os: osx
-      osx_image: xcode8.3.1
+      osx_image: xcode8.3
       sudo: required
 
 before_install:
