--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 
+language: generic		 
+dist: trusty
+sudo: required
+notifications: never
 env:
   - SWIFT_SNAPSHOT=4.0
 
 matrix:
   include:
     - os: linux
-      dist: trusty
-      sudo: required
     - os: osx
-      osx_image: xcode8.3
-      sudo: required
+      osx_image: xcode8.3.1
 
 before_install:
   - git clone https://github.com/IBM-Swift/Package-Builder.git
