--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,17 @@ dist: trusty
 sudo: required
 notifications: never
 env:
-  - SWIFT_SNAPSHOT='swift-4.0-DEVELOPMENT-SNAPSHOT-2017-08-15-a'
+  - SWIFT_SNAPSHOT='swift-4.0-DEVELOPMENT-SNAPSHOT-2017-09-02-a'
 
 matrix:
   include:
     - os: linux
+    - os: linux
+      services: docker
+      env: DOCKER_IMAGE=ubuntu:16.04
+    - os: linux
+      services: docker
+      env: DOCKER_IMAGE=ubuntu:16.10
     - os: osx
       osx_image: xcode8.3
 
