--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,16 @@ language: generic
 dist: trusty
 sudo: required
 notifications: never
-env:
-  - SWIFT_SNAPSHOT='swift-4.0-DEVELOPMENT-SNAPSHOT-2017-09-11-a'
 
 matrix:
   include:
     - os: linux
     - os: linux
       services: docker
-      env: DOCKER_IMAGE=ubuntu:16.04 SWIFT_SNAPSHOT='swift-4.0-DEVELOPMENT-SNAPSHOT-2017-09-11-a'
+      env: DOCKER_IMAGE=ubuntu:16.04
     - os: linux
       services: docker
-      env: DOCKER_IMAGE=ubuntu:16.10 SWIFT_SNAPSHOT='swift-4.0-DEVELOPMENT-SNAPSHOT-2017-09-11-a'
+      env: DOCKER_IMAGE=ubuntu:16.10
     - os: osx
       osx_image: xcode9
 
