--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,17 @@ dist: trusty
 sudo: required
 notifications: never
 env:
-  - SWIFT_SNAPSHOT="4.1"
+  - SWIFT_SNAPSHOT="swift-4.2-DEVELOPMENT-SNAPSHOT-2018-06-04-a"
 
 matrix:
   include:
     - os: linux
     - os: linux
       services: docker
-      env: DOCKER_IMAGE=ubuntu:16.04 SWIFT_SNAPSHOT="4.1"
+      env: DOCKER_IMAGE=ubuntu:16.04 SWIFT_SNAPSHOT="swift-4.2-DEVELOPMENT-SNAPSHOT-2018-06-04-a"
     - os: linux
       services: docker
-      env: DOCKER_IMAGE=ubuntu:16.10 SWIFT_SNAPSHOT="4.1"
+      env: DOCKER_IMAGE=ubuntu:16.10 SWIFT_SNAPSHOT="swift-4.2-DEVELOPMENT-SNAPSHOT-2018-06-04-a"
     - os: osx
       osx_image: xcode9.3
 
