--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 notifications: never
 env:
   global:
-    - SWIFT_SNAPSHOT="4.2"
+    - SWIFT_SNAPSHOT="4.2" CODECOV_ELIGIBLE=true
 
 matrix:
   include:
