--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,8 @@ matrix:
 
 before_install:
   - git clone https://github.com/IBM-Swift/Package-Builder.git
-  - cat >./.swift-test-linux <<EOF
-  - swift test -c release
-  - EOF
-  - cat >./.swift-test-macOS <<EOF
-  - swift test -c release
-  - EOF
+  - echo "swift test -c release" | cat >./.swift-test-linux
+  - echo "swift test -c release" | cat >./.swift-test-macOS
 
 script:
   - while true; do echo "..."; sleep 60; done &
