--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,27 @@ matrix:
       env: CODECOV_ELIGIBLE=true
 
 before_install:
-  - git clone https://github.com/IBM-Swift/Package-Builder.git
-  - echo "swift build -c release" | cat >./.swift-build-macOS
-  - echo "swift test -c release" | cat >./.swift-test-macOS
-  - echo "swift build -c release" | cat >./.swift-build-linux
-  - echo "swift test -c release" | cat >./.swift-test-linux
-
+  - cat <<EOF > build.sh
+    #!/bin/bash
+    
+    set -o verbose
+    
+    if [ -n "${DOCKER_IMAGE}" ]; then
+        docker pull ${DOCKER_IMAGE}
+        docker run --env SWIFT_SNAPSHOT -v ${TRAVIS_BUILD_DIR}:${TRAVIS_BUILD_DIR} ${DOCKER_IMAGE} /bin/bash -c "apt-get update && apt-get install -y git sudo lsb-release wget libxml2 && cd $TRAVIS_BUILD_DIR && ./build.sh"
+    else
+        git clone https://github.com/IBM-Swift/Package-Builder.git
+        
+        echo "swift build -c release" | cat >./.swift-build-macOS
+        echo "swift test -c release" | cat >./.swift-test-macOS
+        echo "swift build -c release" | cat >./.swift-build-linux
+        echo "swift test -c release" | cat >./.swift-test-linux
+        
+        while true; do echo "..."; sleep 60; done &
+        ./Package-Builder/build-package.sh -projectDir $(pwd)
+        kill %1
+    fi
+    EOF
 script:
-  - while true; do echo "..."; sleep 60; done &
-  - ./Package-Builder/build-package.sh -projectDir $TRAVIS_BUILD_DIR
-  - kill %1
+  - ./build.sh
+  
