--- a/.travis.yml
+++ b/.travis.yml
@@ -28,16 +28,16 @@ before_install:
         docker pull ${DOCKER_IMAGE}
         docker run --env SWIFT_SNAPSHOT -v ${TRAVIS_BUILD_DIR}:${TRAVIS_BUILD_DIR} ${DOCKER_IMAGE} /bin/bash -c "apt-get update && apt-get install -y git sudo lsb-release wget libxml2 && cd $TRAVIS_BUILD_DIR && ./build.sh"
     else
-        git clone https://github.com/IBM-Swift/Package-Builder.git
-        echo "swift build -c release" | cat >./.swift-build-macOS
-        echo "swift test -c release" | cat >./.swift-test-macOS
-        echo "swift build -c release" | cat >./.swift-build-linux
-        echo "swift test -c release" | cat >./.swift-test-linux
         while true; do echo "..."; sleep 60; done &
         ./Package-Builder/build-package.sh -projectDir $(pwd)
         kill %1
     fi
     EOF
+  - git clone https://github.com/IBM-Swift/Package-Builder.git
+  - echo "swift build -c release" | cat >./.swift-build-macOS
+  - echo "swift test -c release" | cat >./.swift-test-macOS
+  - echo "swift build -c release" | cat >./.swift-build-linux
+  - echo "swift test -c release" | cat >./.swift-test-linux
   - chmod +x build.sh
 
 script:
