--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_install:
   - echo "swift build -c release" | cat >./.swift-build-linux
   - echo "swift test -c release" | cat >./.swift-test-linux
   - |
-    cat <<"EOF" > build.sh
+    cat <<-"EOF" > build.sh
     \#!/bin/bash
     set -o verbose
     if [ -n "${DOCKER_IMAGE}" ]; then
