--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-language: generic		 
-dist: trusty
+language: generic		
 sudo: required
 notifications: never
 env:
@@ -8,16 +7,16 @@ env:
 
 matrix:
   include:
-    - os: linux
-    - os: linux
-      services: docker
-      env: DOCKER_IMAGE=ubuntu:14.04
-    - os: linux
-      services: docker
-      env: DOCKER_IMAGE=ubuntu:16.04
+    - os: linux 
+      dist:
+        - trusty
+        - xenial
     - os: linux
       services: docker
-      env: DOCKER_IMAGE=ubuntu:18.04
+      env: 
+        - DOCKER_IMAGE=ubuntu:14.04
+        - DOCKER_IMAGE=ubuntu:16.04
+        - DOCKER_IMAGE=ubuntu:18.04
     - os: osx
       osx_image: xcode10
       env: CODECOV_ELIGIBLE=true
