--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-language: generic		
+language: generic		 
+dist: trusty
 sudo: required
 notifications: never
 env:
@@ -7,16 +8,16 @@ env:
 
 matrix:
   include:
-    - os: linux 
-      dist:
-        - trusty
-        - xenial
+    - os: linux
     - os: linux
       services: docker
-      env: 
-        - DOCKER_IMAGE=ubuntu:14.04
-        - DOCKER_IMAGE=ubuntu:16.04
-        - DOCKER_IMAGE=ubuntu:18.04
+      env: DOCKER_IMAGE=ubuntu:14.04
+    - os: linux
+      services: docker
+      env: DOCKER_IMAGE=ubuntu:16.04
+    - os: linux
+      services: docker
+      env: DOCKER_IMAGE=ubuntu:18.04
     - os: osx
       osx_image: xcode10
       env: CODECOV_ELIGIBLE=true
