--- a/Doggie.xcodeproj/xcshareddata/xcschemes/Doggie.xcscheme
+++ b/Doggie.xcodeproj/xcshareddata/xcschemes/Doggie.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:Doggie.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0A29B1DF218998710046FFB4"
+               BuildableName = "DoggieGP.framework"
+               BlueprintName = "DoggieGP"
+               ReferencedContainer = "container:Doggie.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -91,7 +105,7 @@
       </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Release">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
