--- a/Doggie.xcodeproj/Info.plist
+++ b/Doggie.xcodeproj/Info.plist
@@ -16,10 +16,10 @@
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2015 - 2019 Susan Cheng. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
