--- a/Doggie.xcodeproj/xcshareddata/xcschemes/Doggie.xcscheme
+++ b/Doggie.xcodeproj/xcshareddata/xcschemes/Doggie.xcscheme
@@ -26,8 +26,17 @@
       buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      codeCoverageEnabled = "YES"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "087FE5B41A372D97005A2E9E"
+            BuildableName = "Doggie.framework"
+            BlueprintName = "Doggie"
+            ReferencedContainer = "container:Doggie.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -40,17 +49,6 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "087FE5B41A372D97005A2E9E"
-            BuildableName = "Doggie.framework"
-            BlueprintName = "Doggie"
-            ReferencedContainer = "container:Doggie.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Release"
@@ -71,8 +69,6 @@
             ReferencedContainer = "container:Doggie.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
