--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
       env: USE_XCODEBUILD=true CODECOV_ELIGIBLE=true
     - os: osx
       osx_image: xcode11
-      env: DESTINATION="platform=iOS Simulator,name=iPhone XS" SDK=iphonesimulator USE_XCODEBUILD=true
+      env: DESTINATION="platform=iOS Simulator,name=iPhone 11" SDK=iphonesimulator USE_XCODEBUILD=true
     - os: osx
       osx_image: xcode11
       env: DESTINATION="platform=tvOS Simulator,name=Apple TV 4K" SDK=appletvsimulator USE_XCODEBUILD=true
